# cmake-modules

./: CMakeLists.txt  LICENSE  NOTES.md  README.md
find/: FindLIBRE.cmake  FindLIBREM.cmake  README.md
modules/: README.md  compiler_warnings.cmake  embedded_resources.cmake  install_paths.cmake  library_suffix.cmake  library_suffix.md  os_info.cmake  packaging.cmake  print_target_properties.cmake  scm_info.cmake
test/: CMakeLists.txt  main.cpp
test/os-release/: debian-12.0
